style.css
.isowikitweaks-list ul {
  list-style: none;
  padding: 0;
}
.isowikitweaks-list ul li {
  padding-left: 1.3em;
}

.isowikitweaks-list ul li:before {
  display: inline-block;
  color: #000;
  float: left;
  margin-left: -1.3em; /* same as padding-left set on li */
  width: 1.3em; /* same as padding-left set on li */
}

.isowikitweaks-list-style-arrow ul > li:before {
  content: "⇨";
}

.isowikitweaks-list-style-arrow ul li li:before {
  content: "↳";
}

.isowikitweaks-table-no-border-horizontal td {
	border-top: 0;
	border-bottom: 0;
}

.isowikitweaks-table-border-hide-empty td {
	border-bottom: 0;
}

.isowikitweaks-merge-duplicates td {
    border-bottom: 0;
}

.isowikitweaks-rotate div.rotate {
    writing-mode: vertical-rl;
    transform: rotate(180deg);
    white-space: nowrap;
}

